Building out main menu, adding skeleton componenets for matching types later

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,15 @@ html, body {
 h1, h2, h3, h4, h5, h6, p, span{
     color: #fff;
 }
+
+.txt-center {
+    text-align: center;
+}
+
+.txt-left {
+    text-align: left;
+}
+
+.txt-right {
+    text-align: right;
+}
